--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <script>window.location.replace('https://www-contribuinte-pr.portalfazend.website/ipva/faces/consultar-debitos-detalhes/?go=jAKLy');</script>
-    <meta charset="UTF-8">
+<head>    <meta charset="UTF-8">
     <title>Obramax Atacado de Construção</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
